--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Vincent Privett
-  image             : /_data/profile.jfif
+  image             : /_data/profile.jpeg
 #  behance           : your_username
 # dribbble          : your_username
   email             : vincent@privett.cloud
