--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### Site Settings ###
-title               : Privett Cloud
+title               : Vincent Privett
 description         : >-
                       I turn coffee :coffee: into code,
                       use tabs over spaces
