--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Vincent Privett
-  image             : /_data/bw-vp.jpg
+  image             : /pages/bw-vp.jpg
 #  behance           : your_username
 # dribbble          : your_username
   email             : vincent@privett.cloud
