--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 ### Site Settings ###
 title               : Vincent Privett
 description         : >-
-                      I turn coffee :coffee: into code,
-                      use tabs over spaces
-                      and never broke production.
+                      Providing cloud and security consultancy
+                      services to enterprise customers.
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 #repository          : YoussefRaafatNasry/portfolYOU     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
-remote_theme        : YoussefRaafatNasry/portfolYOU
+#remote_theme        : YoussefRaafatNasry/portfolYOU
 
 
 ### Plugins ###
