--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description         : >-
                       services to enterprise customers.
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 #repository          : YoussefRaafatNasry/portfolYOU     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
-#remote_theme        : YoussefRaafatNasry/portfolYOU
+remote_theme        : YoussefRaafatNasry/portfolYOU
 
 
 ### Plugins ###
